# NokiaPathFinder

./: .gitignore  All_Participants_Timetable.docx  All_Participants_Timetable.md  All_Participants_Timetable_new.docx  Katowice.gpx  P1_ANALYSIS_SUMMARY.md  P1_TIMETABLE.md  README.md  Runs_Over_3_Minutes.docx  analyze_p1.py  build_all_timetables.py  check_one_timers.py  direction.html  direction.js  direction.json  export_db_to_csv.py  inspect_nav.py  log_database-1.db  log_database-a.db  log_database.db  md_to_docx.py  p1_timetable.py  pynykin-1-dev.gpx  pynykin-2-dev.gpx  pyproject.toml  requirements.txt  runs_over_3min.py  tuni.db
src/: app.py  basePath.py  csvLogs.py  deviation.py  direction.py  geo.py  geo_utils.py  geojson.py  gpx.py  haptic.py  mapping.py  screen.py  screenNavUtils.py  time-on-screen.py  utils.py
src/components/: display_location_logs.py  select_file.py  time_slider.py
src/sections/: compass.py  csv_data.py  database_selection.py  location.py  screen_selection.py
src/utils/: base_path.py  deviation.py  geo.py  geojson.py  haptic.py  logs.py  participants_data.py
