[project]
name = "data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "pandas>=2.3.2",
    "pyproj>=3.7.1",
    "shapely>=2.1.1",
    "streamlit>=1.49.1",
    "streamlit-folium>=0.25.1",
]
